MFC: r287337   Apply the noline attribute to vdev_queue_max_async_writes

This makes it possible to analyze the performance of the new ZFS
  write throttle with dtrace

PR:		200316
Sponsored by:	FreeBSD Mastery: Advanced ZFS

Former-commit-id: 8711665a42bebd3e3b2078965f40e93676dc9783