sys/cddl/contrib/opensolaris/uts/common/fs/zfs/vdev_queue.c
@@ -2098,6 +2098,7 @@ end_function
 
 begin_function
 specifier|static
+name|__noinline
 name|int
 name|vdev_queue_max_async_writes
 parameter_list|(
